--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "url": "https://github.com/Rehmsy/about-javascript-and-dom/issues"
   },
   "homepage": "https://github.com/Rehmsy/about-javascript-and-dom#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "eslint": "^5.3.0",
     "jest": "^23.5.0"
   }
