--- a/.eslintrc
+++ b/.eslintrc
@@ -6,12 +6,13 @@
     "env": {
       "es6": true,
       "node": true,
-      "mocha": true
+      "mocha": true,
+      "jest": true
     },
     "extends": ["eslint:recommended"],
     "rules": {
         "no-console": "off",
-        "indent": ["error", 4, { "SwitchCase": 1 }],
+        "indent": ["error", 2, { "SwitchCase": 1 }],
         "quotes": ["error", "single"],
         "semi": ["error", "always"],
         "space-in-parens": ["error"],
