--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,8 @@
     "env": {
       "es6": true,
       "node": true,
-      "mocha": true,
-      "jest": true
+      "jest": true,
+      "browser": true
     },
     "extends": ["eslint:recommended"],
     "rules": {
