--- a/.eslintrc
+++ b/.eslintrc
@@ -1,39 +1,47 @@
 {
-    "parserOptions": {
-      "ecmaVersion": 8,
-      "sourceType": "module"
-    },
-    "env": {
-      "es6": true,
-      "node": true,
-      "mocha": true,
-      "jest": true
-    },
-    "extends": ["eslint:recommended"],
-    "rules": {
-        "no-console": "off",
-        "indent": ["error", 2, { "SwitchCase": 1 }],
-        "quotes": ["error", "single"],
-        "semi": ["error", "always"],
-        "space-in-parens": ["error"],
-        "space-infix-ops": "error",
-        "object-curly-spacing": ["error", "always"],
-        "comma-spacing": "error",
-        "space-before-function-paren": ["error", "never"],
-        "keyword-spacing": [
-          "error", 
-          { 
-            "before": true, 
-            "after": true,
-            "overrides": {
-                "do": { "after": false },
-                "for": { "after": false },
-                "if": { "after": false },
-                "switch": { "after": false },
-                "while": { "after": false }
-            } 
-          }
-        ],
-        "array-bracket-spacing": "error"
+  "parserOptions": {
+    "ecmaVersion": 8,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true,
+      "module": true,
+      "jsx": true
     }
+  },
+  "env": {
+    "es6": true,
+    "browser": true,
+    "jest": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended"
+  ],
+  "rules": {
+      "no-console": "warn",
+      "indent": ["error", 2, { "SwitchCase": 1 }],
+      "quotes": ["error", "single"],
+      "semi": ["error", "always"],
+      "space-in-parens": ["error"],
+      "space-infix-ops": "error",
+      "object-curly-spacing": ["error", "always"],
+      "comma-spacing": "error",
+      "space-before-function-paren": ["error", "never"],
+      "keyword-spacing": [
+        "error", 
+        { 
+          "before": true, 
+          "after": true,
+          "overrides": {
+            "if": { "after": false },
+            "for": { "after": false },
+            "while": { "after": false },
+            "do": { "after": false },
+            "catch": { "after": false },
+            "switch": { "after": false }
+          } 
+        }
+      ],
+      "array-bracket-spacing": "error"
   }
+}
